--- a/web/public/style.css
+++ b/web/public/style.css
@@ -5,7 +5,11 @@ body {
   color: #333;
   font-size: 18px;
   line-height: 1.618;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: monospace;
+}
+
+nav {
+  margin-bottom: 2rem;
 }
 
 label {
@@ -28,6 +32,7 @@ button, button:hover {
   border: 1px solid currentColor;
   background-color: white;
   font-size: 1rem;
+  font-family: inherit;
 }
 
 a {
@@ -72,9 +77,9 @@ input, textarea {
   background-color: none;
   font-size: 1rem;
   min-width: 20em;
+  font-family: inherit;
 }
 
 textarea {
-  font-family: sans-serif;
   resize: vertical;
 }
